--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.12.2",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "postcss": "^8.5.6",
